--- a/valentine.html
+++ b/valentine.html
@@ -45,6 +45,8 @@
       background: radial-gradient(circle at top, var(--bg2), var(--bg1));
       font-family: system-ui, sans-serif;
       padding: 16px;
+      -webkit-user-select: none;
+      user-select: none;
     }
 
     #confettiCanvas {
@@ -82,6 +84,7 @@
       height: auto;
       display: block;
       object-fit: contain;
+      animation: float 3s ease-in-out infinite;
     }
 
     h1 {
@@ -129,6 +132,12 @@
       color: #111827;
     }
 
+    html[dir="rtl"] h1,
+    html[dir="rtl"] .hint,
+    html[dir="rtl"] .result {
+      letter-spacing: 0;
+    }
+
     .hint {
       margin-top: 10px;
       font-size: 13px;
@@ -170,15 +179,6 @@
       0%, 100% { transform: translateY(0px); }
       50% { transform: translateY(-8px); }
     }
-
-    .art {
-      animation: float 3s ease-in-out infinite;
-    }
-
-    body {
-      -webkit-user-select: none;
-      user-select: none;
-    }
   </style>
 </head>
 
@@ -200,7 +200,7 @@
     <div class="hint" id="hint">Even 'No' is whispering 'Yes'…🥰</div>
 
     <section class="result" id="result">
-      <h2>YAY!🎉</h2>
+      <h2 id="resultText">YAY!🎉</h2>
       <img
         class="fireworks"
         src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExOGRpYTBhYTNlZThiNmo3cTgyczcwc3hxMGZ3OWJqNzE0Y2x5YTg4eSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/7iZQzo9r0LcFnP0nnm/giphy.gif"
@@ -211,161 +211,209 @@
 
   <script>
     const urlParams = new URLSearchParams(window.location.search);
-    const name = urlParams.get('name') || "Ulee";
-    document.getElementById('question').textContent = `${name}, will you be my valentine?`;
+    const lang = urlParams.get("lang") || "en";
+    const nameParam = urlParams.get("name");
 
-    const zone = document.getElementById("zone");
-    const yesBtn = document.getElementById("yesBtn");
-    const noBtn = document.getElementById("noBtn");
-    const hint = document.getElementById("hint");
-    const result = document.getElementById("result");
-    const confettiCanvas = document.getElementById("confettiCanvas");
-
-    let hasMoved = false;
-    let isVariantShown = false;
-
-    function resizeConfettiCanvas() {
-      const dpr = Math.max(1, window.devicePixelRatio || 1);
-      confettiCanvas.width = Math.floor(window.innerWidth * dpr);
-      confettiCanvas.height = Math.floor(window.innerHeight * dpr);
-      confettiCanvas.style.width = "100vw";
-      confettiCanvas.style.height = "100vh";
+    async function loadLang() {
+      try {
+        const res = await fetch(`lang/${lang}.json`);
+        if (!res.ok) throw new Error("lang not found");
+        return await res.json();
+      } catch (e) {
+        const res = await fetch(`lang/en.json`);
+        return await res.json();
+      }
     }
 
-    resizeConfettiCanvas();
-    window.addEventListener("resize", resizeConfettiCanvas);
-    window.addEventListener("orientationchange", () => setTimeout(resizeConfettiCanvas, 150));
+    (async () => {
+      const t = await loadLang();
+      const rtlLangs = new Set(["ar", "he", "fa", "ur"]);
+      const isRTL = rtlLangs.has(lang.toLowerCase());
+      document.documentElement.dir = isRTL ? "rtl" : "ltr";
+      document.documentElement.lang = lang;
 
-    const confettiInstance = confetti.create(confettiCanvas, {
-      resize: false,
-      useWorker: true
-    });
+      const zone = document.getElementById("zone");
+      const yesBtn = document.getElementById("yesBtn");
+      const noBtn = document.getElementById("noBtn");
+      const hint = document.getElementById("hint");
+      const result = document.getElementById("result");
+      const question = document.getElementById("question");
+      const confettiCanvas = document.getElementById("confettiCanvas");
 
-    function fullScreenConfetti() {
-      const end = Date.now() + 1600;
-      (function frame() {
+      function parseMarkdown(text) {
+        return text.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
+      }
+
+      question.textContent = nameParam ? t.question.replace("{name}", nameParam) : t.title;
+      yesBtn.textContent = t.yes;
+      noBtn.textContent = t.no;
+      hint.innerHTML = parseMarkdown(t.hint);
+      document.getElementById("resultText").textContent = t.yay;
+
+      let hasMoved = false;
+      let isVariantShown = false;
+
+      function resizeConfettiCanvas() {
+        const dpr = Math.max(1, window.devicePixelRatio || 1);
+        confettiCanvas.width = Math.floor(window.innerWidth * dpr);
+        confettiCanvas.height = Math.floor(window.innerHeight * dpr);
+        confettiCanvas.style.width = "100vw";
+        confettiCanvas.style.height = "100vh";
+      }
+
+      resizeConfettiCanvas();
+      window.addEventListener("resize", resizeConfettiCanvas);
+      window.addEventListener("orientationchange", () => setTimeout(resizeConfettiCanvas, 150));
+
+      const confettiInstance = confetti.create(confettiCanvas, {
+        resize: false,
+        useWorker: true
+      });
+
+      function burst(opts) {
         confettiInstance({
-          particleCount: 12,
+          particleCount: 90,
           spread: 90,
-          startVelocity: 45,
-          ticks: 180,
-          origin: { x: Math.random(), y: Math.random() * 0.3 }
+          startVelocity: 55,
+          decay: 0.92,
+          scalar: 1.1,
+          ticks: 260,
+          ...opts
         });
-        if (Date.now() < end) requestAnimationFrame(frame);
-      })();
-      setTimeout(() => {
-        confettiInstance({
-          particleCount: 300,
-          spread: 140,
-          startVelocity: 60,
-          ticks: 220,
-          origin: { x: 0.5, y: 0.55 }
-        });
-      }, 300);
-    }
-
-    let yesScale = 1;
-    function growYes() {
-      yesScale = Math.min(2.2, yesScale + 0.1);
-      yesBtn.style.transform = `translate(-120%, -50%) scale(${yesScale})`;
-    }
-
-    function clamp(n, min, max) {
-      return Math.max(min, Math.min(max, n));
-    }
-
-    const noVariants = ["🫣", "Yes?", "No?!", "Hehe", "😈", "…?", "👀"];
-    function showTextVariant() {
-      if (isVariantShown) return;
-      isVariantShown = true;
-      const randomText = noVariants[Math.floor(Math.random() * noVariants.length)];
-      noBtn.textContent = randomText;
-
-      setTimeout(() => {
-        noBtn.textContent = "No";
-        isVariantShown = false;
-      }, 1000);
-    }
-
-    function moveNo(clientX, clientY) {
-      const z = zone.getBoundingClientRect();
-      const b = noBtn.getBoundingClientRect();
-
-      let dx = (b.left + b.width / 2) - clientX;
-      let dy = (b.top + b.height / 2) - clientY;
-      let mag = Math.hypot(dx, dy) || 1;
-      dx /= mag;
-      dy /= mag;
-
-      let newLeft = (b.left - z.left) + dx * 140;
-      let newTop  = (b.top - z.top)  + dy * 140;
-
-      newLeft = clamp(newLeft, 0, z.width - b.width);
-      newTop  = clamp(newTop, 0, z.height - b.height);
-
-      noBtn.style.transition = "left 0.32s cubic-bezier(0.34, 1.56, 0.64, 1), " + "top  0.32s cubic-bezier(0.34, 1.56, 0.64, 1), " + "transform 0.18s ease-out";
-      noBtn.style.left = newLeft + "px";
-      noBtn.style.top  = newTop  + "px";
-      noBtn.style.transform = "scale(1.08) rotate(3deg)";
-
-      setTimeout(() => {
-        noBtn.style.transform = "scale(1) rotate(0deg)";
-      }, 180);
-
-      showTextVariant();
-
-      if (!hasMoved) {
-        hasMoved = true;
-        hint.style.opacity = 0.7;
       }
 
-      growYes();
-    }
+      function fullScreenConfetti() {
+        burst({ particleCount: 180, spread: 160, startVelocity: 65, origin: { x: 0.5, y: 0.5 } });
 
-    noBtn.addEventListener("pointerenter", e => {
-      moveNo(e.clientX, e.clientY);
-    });
+        setTimeout(() => {
+          burst({ particleCount: 90, angle: 60, spread: 70, origin: { x: 0, y: 0.55 } });
+          burst({ particleCount: 90, angle: 120, spread: 70, origin: { x: 1, y: 0.55 } });
+        }, 160);
 
-    noBtn.addEventListener("pointermove", e => {
-      const b = noBtn.getBoundingClientRect();
-      const d = Math.hypot(
-        (b.left + b.width / 2) - e.clientX,
-        (b.top + b.height / 2) - e.clientY
-      );
-      if (d < 140) moveNo(e.clientX, e.clientY);
-    });
+        const end = Date.now() + 2400;
+        const ys = [0.12, 0.5, 0.88];
 
-    noBtn.addEventListener("touchstart", e => {
-      e.preventDefault();
-      if (e.touches.length > 0) {
-        const touch = e.touches[0];
-        moveNo(touch.clientX, touch.clientY);
+        (function frame() {
+          const yBase = ys[(Math.random() * ys.length) | 0];
+          burst({
+            particleCount: 10,
+            spread: 95,
+            startVelocity: 45,
+            origin: { x: Math.random(), y: yBase + (Math.random() - 0.5) * 0.18 }
+          });
+          if (Date.now() < end) requestAnimationFrame(frame);
+        })();
+
+        setTimeout(() => {
+          burst({ particleCount: 260, spread: 200, startVelocity: 70, origin: { x: 0.5, y: 0.42 } });
+        }, 900);
       }
-    }, { passive: false });
 
-    noBtn.addEventListener("touchmove", e => {
-      e.preventDefault();
-      if (e.touches.length > 0) {
-        const touch = e.touches[0];
+      let yesScale = 1;
+      function growYes() {
+        yesScale = Math.min(2.2, yesScale + 0.1);
+        yesBtn.style.transform = `translate(-120%, -50%) scale(${yesScale})`;
+      }
+
+      function clamp(n, min, max) {
+        return Math.max(min, Math.min(max, n));
+      }
+
+      const noVariants = t.noVariants;
+      function showTextVariant() {
+        if (isVariantShown) return;
+        isVariantShown = true;
+        const randomText = noVariants[Math.floor(Math.random() * noVariants.length)];
+        noBtn.textContent = randomText;
+
+        setTimeout(() => {
+          noBtn.textContent = t.no;
+          isVariantShown = false;
+        }, 1000);
+      }
+
+      function moveNo(clientX, clientY) {
+        const z = zone.getBoundingClientRect();
+        const b = noBtn.getBoundingClientRect();
+
+        let dx = (b.left + b.width / 2) - clientX;
+        let dy = (b.top + b.height / 2) - clientY;
+        let mag = Math.hypot(dx, dy) || 1;
+        dx /= mag;
+        dy /= mag;
+
+        let newLeft = (b.left - z.left) + dx * 140;
+        let newTop  = (b.top - z.top)  + dy * 140;
+
+        newLeft = clamp(newLeft, 0, z.width - b.width);
+        newTop  = clamp(newTop, 0, z.height - b.height);
+
+        noBtn.style.transition = "left 0.32s cubic-bezier(0.34, 1.56, 0.64, 1), " + "top  0.32s cubic-bezier(0.34, 1.56, 0.64, 1), " + "transform 0.18s ease-out";
+        noBtn.style.left = newLeft + "px";
+        noBtn.style.top  = newTop  + "px";
+        noBtn.style.transform = "scale(1.08) rotate(3deg)";
+
+        setTimeout(() => {
+          noBtn.style.transform = "scale(1) rotate(0deg)";
+        }, 180);
+
+        showTextVariant();
+
+        if (!hasMoved) {
+          hasMoved = true;
+          hint.style.opacity = 0.7;
+        }
+
+        growYes();
+      }
+
+      noBtn.addEventListener("pointerenter", e => {
+        moveNo(e.clientX, e.clientY);
+      });
+
+      noBtn.addEventListener("pointermove", e => {
         const b = noBtn.getBoundingClientRect();
         const d = Math.hypot(
-          (b.left + b.width / 2) - touch.clientX,
-          (b.top + b.height / 2) - touch.clientY
+          (b.left + b.width / 2) - e.clientX,
+          (b.top + b.height / 2) - e.clientY
         );
-        if (d < 140) moveNo(touch.clientX, touch.clientY);
-      }
-    }, { passive: false });
+        if (d < 140) moveNo(e.clientX, e.clientY);
+      });
 
-    noBtn.addEventListener("click", e => e.preventDefault());
-    noBtn.addEventListener("touchend", e => e.preventDefault());
+      noBtn.addEventListener("touchstart", e => {
+        e.preventDefault();
+        if (e.touches.length > 0) {
+          const touch = e.touches[0];
+          moveNo(touch.clientX, touch.clientY);
+        }
+      }, { passive: false });
 
-    yesBtn.addEventListener("click", () => {
-      zone.style.display = "none";
-      hint.style.display = "none";
-      result.style.display = "block";
-      resizeConfettiCanvas();
-      fullScreenConfetti();
-    });
+      noBtn.addEventListener("touchmove", e => {
+        e.preventDefault();
+        if (e.touches.length > 0) {
+          const touch = e.touches[0];
+          const b = noBtn.getBoundingClientRect();
+          const d = Math.hypot(
+            (b.left + b.width / 2) - touch.clientX,
+            (b.top + b.height / 2) - touch.clientY
+          );
+          if (d < 140) moveNo(touch.clientX, touch.clientY);
+        }
+      }, { passive: false });
+
+      noBtn.addEventListener("click", e => e.preventDefault());
+      noBtn.addEventListener("touchend", e => e.preventDefault());
+
+      yesBtn.addEventListener("click", () => {
+        document.querySelector(".art-container").style.display = "none";
+        question.style.display = "none";
+        zone.style.display = "none";
+        hint.style.display = "none";
+        result.style.display = "block";
+        resizeConfettiCanvas();
+        fullScreenConfetti();
+      });
+    })();
   </script>
 </body>
 </html>
