--- a/valentine.html
+++ b/valentine.html
@@ -186,7 +186,7 @@
 
   <main class="card">
     <div class="art-container">
-      <img src="img/" alt="Bunnies" class="art">
+      <img src="img/" alt="https://imgur.com/a/9pVGOGM"class="art">
     </div>
 
     <h1 id="question"></h1>
